remove caption table

--- a/src/app/properties-list/properties-list.component.html
+++ b/src/app/properties-list/properties-list.component.html
@@ -1,6 +1,6 @@
 <h5>SGS Properties</h5>
 
-<table class="table caption-top table-striped">
+<table class="table table-striped">
   <thead>
     <tr center>
       <th scope="col">#</th>
