--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,7 +1,4 @@
-
-<div class="main">
-
-Mohammed Mojahed.
-
+<div>
+  <h1 style="color: blue">Im Blue Mane</h1>
+  <img src="donald-duck.png" alt="donald duck" title="donald duck" />
 </div>
-
