انتهت من عمل الفلتر

--- a/src/app/filter-property/filter-property.component.html
+++ b/src/app/filter-property/filter-property.component.html
@@ -1,1 +1,6 @@
-<p>filter-property works!</p>
+
+<div class="dropdown">
+   <button onclick="myFunction()" class="dropbtn">Select Here<button>
+  <input type="text" placeholder="Search.." id="myInput" onkeyup="filterFunction()"
+</div> 
+
