--- a/src/app/filter-property/filter-property.component.html
+++ b/src/app/filter-property/filter-property.component.html
@@ -1,6 +1,9 @@
-
-<div class="dropdown">
-   <button onclick="myFunction()" class="dropbtn">Select Here<button>
-  <input type="text" placeholder="Search.." id="myInput" onkeyup="filterFunction()"
-</div> 
-
+<form class="row" style="margin-bottom: 20px;">
+  <div class="col">
+    <label for="inputPassword2" class="visually-hidden">Password</label>
+    <input type="search" class="form-control" placeholder="Search">
+  </div>
+  <div class="col-2">
+    <div type="submit" class="btn btn-primary"><i class="fa-solid fa-magnifying-glass"></i> Search</div>
+  </div>
+</form>
