--- a/src/app/property-group/property-group.component.html
+++ b/src/app/property-group/property-group.component.html
@@ -15,9 +15,12 @@
     type="button"
     class="btn btn-primary"
   >
+    <i class="fa-solid fa-floppy-disk"></i>
     OK
   </button>
+
   <button style="width: 150px" type="button" class="btn btn-primary">
+    <i class="fa-solid fa-ban"></i>
     Cancel
   </button>
 </form>
