تم عرض الصورة #13

--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,4 +1,6 @@
-<div>
-  <h1 style="color: blue">Im Blue Mane</h1>
-  <img src="donald-duck.png" alt="donald duck" title="donald duck" />
+<div class="main">
+  <h1 style="color: blue">Im Blue Man</h1>
+  <app-poto></app-poto>
+  
+
 </div>
