--- a/src/app/poto/poto.component.html
+++ b/src/app/poto/poto.component.html
@@ -1,3 +1,3 @@
-
-  <img src="../../assets/Img/BlueMan.jpg"alt="Blue Mane" width="300" height="300" />
+<h1 style="color: blue">Im Blue Man</h1>
+<img src="../../assets/Img/BlueMan.jpg"alt="Blue Mane" width="300" height="300" />
 
