create form for add new property

--- a/src/app/add-new-property/add-new-property.component.html
+++ b/src/app/add-new-property/add-new-property.component.html
@@ -1,31 +1,126 @@
-<p>add-new-property works!</p>
+<p>add-new-property</p>
 
-<p>Group No.</p>
+Group Name :
 <select class="form-select" aria-label="Default select example">
   <option value="1">Gelogeval Dievises</option>
   <option value="2">Transfer Stomec</option>
   <option value="3">Electronic Devises</option>
   <option value="4">Oficce Stomec</option>
 </select>
-<input type="text" id=" value" />
 
-<p>Category No.</p>
+Category Name :
 <select class="form-select" aria-label="Default select example">
   <option value="1">Information devies</option>
   <option value="2">Offic</option>
   <option value="3">cars</option>
   <option value="4">babg</option>
 </select>
-<input type="text" id=" value" />
 
-<p>Clase No.</p>
+Clase Name :
 <select class="form-select" aria-label="Default select example">
   <option value="1">copmpuer</option>
   <option value="2">Table</option>
   <option value="3">TelePhone</option>
   <option value="4">Tfaya</option>
 </select>
-<input type="text" id=" value" />
+<br />
 
-<p>SGS No.</p>
-<input type="text" id=" value" />
+<div class="row">
+  <div class="col-md-4">
+    <div class="input-group">
+      <label for="SgsNo" class="col-form-label">Sgs No: </label>
+      <input type="text" class="form-control" id="SgsNo" />
+    </div>
+  </div>
+  <div class="col-md-4">
+    <div class="input-group">
+      <label for="PartName" class="col-form-label">Part Name: </label>
+      <input type="text" class="form-control" id="PartName" />
+    </div>
+  </div>
+</div>
+<br />
+<div class="row">
+  <div class="col-md-4">
+    <div class="input-group">
+      <label for="PartNo" class="col-form-label">Part No: </label>
+      <input type="text" class="form-control" id="PartNo" />
+    </div>
+  </div>
+  <br />
+  <div class="col-md-4">
+    <div class="input-group">
+      <label for="SeiralNo" class="col-form-label"> SeiralNo: </label>
+      <input type="text" class="form-control" id=" SeiralNo" />
+    </div>
+  </div>
+  <br />
+  <div class="col-md-4">
+    <div class="input-group">
+      <label for="InvoiseNo" class="col-form-label"> InvoiseNo: </label>
+      <input type="text" class="form-control" id=" InvoiseNo" />
+    </div>
+  </div>
+</div>
+<br />
+<div class="row">
+  <div class="col-md-4">
+    <div class="input-group">
+      <label for="Invoise Date" class="col-form-label"> Invoise Date: </label>
+      <input type="date" class="form-control" id="Invoise Date" />
+    </div>
+  </div>
+
+  <div class="col-md-4">
+    <div class="input-group">
+      <label for="SellNo" class="col-form-label"> SellNo: </label>
+      <input type="text" class="form-control" id=" SellNo" />
+    </div>
+  </div>
+  <div class="col-md-4">
+    <div class="input-group">
+      <label for="Sell Date" class="col-form-label"> Sell Date: </label>
+      <input type="date" class="form-control" id="Sell Date" />
+    </div>
+  </div>
+
+  <div class="col-md-4">
+    <label> part Decrpiotn: </label>
+    <textarea
+      class="form-control"
+      placeholder="Leave a comment here"
+      id="floatingTextarea"
+    ></textarea>
+  </div>
+  <div>
+    Brand type:
+    <select class="form-select" aria-label="Default select example">
+      <option value="1">IBM</option>
+      <option value="2">Sony</option>
+      <option value="3">Simanc</option>
+      <option value="4">Carrier</option>
+    </select>
+  </div>
+  <div>
+    Status:
+    <select class="form-select" aria-label="Default select example">
+      <option value="1">Sell</option>
+      <option value="2">Consists</option>
+      <option value="3">In Stock</option>
+      <option value="4">New</option>
+    </select>
+  </div>
+  <div>
+    Supplier Name:
+    <select class="form-select" aria-label="Default select example">
+      <option value="1">Khalid Company</option>
+      <option value="2">samier Company</option>
+      <option value="3">Nwaf Company</option>
+      <option value="4">Abbas Company</option>
+    </select>
+  </div>
+</div>
+<br />
+<div>
+  <button class="el el-align-center">Submit</button>
+</div>
